# skills.md

.github/: SKILL.md
.github-openart-ai/: SKILL.md
.github-ourdreamreview/: SKILL.md
5YN-ExtractFinalVideoFrame-PY/: SKILL.md
AI-Text-Video/: SKILL.md
AI-Youtube-Shorts-Generator/: SKILL.md
Agent-Wiz/: SKILL.md
AutoGPT/: SKILL.md
AutoShorts/: SKILL.md
CL4R1T4S/: SKILL.md
CLI11/: SKILL.md
Chaterm/: SKILL.md
CloudBase-MCP/: SKILL.md
ComfyUI-LTXVideo/: SKILL.md
Cookbook/: SKILL.md
DAMO-YOLO/: SKILL.md
DaroEngine2/: SKILL.md
Davinchi-Resolve-Studio-v20.3-Windows/: SKILL.md
DesktopCommanderMCP/: SKILL.md
Dev-Janitor/: SKILL.md
DotWriter/: SKILL.md
EAGLE/: SKILL.md
Eagle3_for_MiniCPM4/: SKILL.md
EfficientManimCloud/: SKILL.md
FlexGEMM/: SKILL.md
FlowDocsPage/: SKILL.md
GDevelop/: SKILL.md
GPT_API_free/: SKILL.md
Graphite/: SKILL.md
Hailo-Application-Code-Examples/: SKILL.md
Hailo-SoC-Profiler/: SKILL.md
HunyuanVideo-I2V/: SKILL.md
InteractiveAvatarNextJSDemo/: SKILL.md
J.A.R.V.I.S/: SKILL.md
JARVIS/: SKILL.md
JARVIS-AI-Assistant/: SKILL.md
JARVIS-ChatGPT/: SKILL.md
JARVIS-MARK5/: SKILL.md
Jarvis-Desktop-Voice-Assistant/: SKILL.md
Kaku/: SKILL.md
LMCache/: SKILL.md
LPRNet_Pytorch/: SKILL.md
LTX-Video/: SKILL.md
LangBot/: SKILL.md
Live3D/: SKILL.md
Loading-Bar-Animation/: SKILL.md
Lumina/: SKILL.md
MaxVideoAi/: SKILL.md
Moho-Pro-14.4-2D-Animation-Tools/: SKILL.md
Mysti/: SKILL.md
Noi/: SKILL.md
Open-Ai-Sora/: SKILL.md
PETR/: SKILL.md
QuantDinger/: SKILL.md
RNLDNetDiagnoService/: SKILL.md
Rive_SingularLive_Integration/: SKILL.md
RobustVideoMatting/: SKILL.md
S1EM/: SKILL.md
SQLite.swift/: SKILL.md
VCR/: SKILL.md
summa/summa-indexer/: Cargo.toml
summa/summa-indexer-wasm/: Cargo.toml  README.md  mise.toml  package.json  proto.filter.json  tsconfig.json
summa/summa-indexer-wasm/.cargo/: config.toml
summa/summa-indexer-wasm/crate/: errors.rs  indexer.rs  lib.rs
summa/summa-indexer-wasm/src/: index-writer.ts  index.ts  remote-index-writer.ts  root-worker.ts
summa/summa-indexer-wasm/src/grpc-web/: consumer_service.client.ts  consumer_service.ts  dag_pb.ts  index_service.client.ts  public_service.ts  query.ts  reflection_service.ts  search_service.client.ts  unixfs.ts
summa/summa-indexer/src/: lib.rs
(+1507 files in other folders)
